un peu de mise au propre

--- a/src/msp2553/comuart/Debug/makefile
+++ b/src/msp2553/comuart/Debug/makefile
@@ -11,6 +11,9 @@ GEN_CMDS__FLAG :=
 
 ORDERED_OBJS += \
 "./main.obj" \
+"./spi2553.obj" \
+"./uart.obj" \
+"./util.obj" \
 "../lnk_msp430g2553.cmd" \
 $(GEN_CMDS__FLAG) \
 -llibc.a \
@@ -153,8 +156,8 @@ comuart.hex: $(EXE_OUTPUTS)
 # Other Targets
 clean:
 	-$(RM) $(BIN_OUTPUTS__QUOTED)$(EXE_OUTPUTS__QUOTED)
-	-$(RM) "main.obj" 
-	-$(RM) "main.d" 
+	-$(RM) "main.obj" "spi2553.obj" "uart.obj" "util.obj" 
+	-$(RM) "main.d" "spi2553.d" "uart.d" "util.d" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
