--- a/src/msp2553/codemsp2553/Debug/makefile
+++ b/src/msp2553/codemsp2553/Debug/makefile
@@ -10,6 +10,7 @@ GEN_OPTS__FLAG :=
 GEN_CMDS__FLAG := 
 
 ORDERED_OBJS += \
+"./drivermoteur.obj" \
 "./main.obj" \
 "./spi2553.obj" \
 "./uart.obj" \
@@ -156,8 +157,8 @@ codemsp2553.hex: $(EXE_OUTPUTS)
 # Other Targets
 clean:
 	-$(RM) $(BIN_OUTPUTS__QUOTED)$(EXE_OUTPUTS__QUOTED)
-	-$(RM) "main.obj" "spi2553.obj" "uart.obj" "util.obj" 
-	-$(RM) "main.d" "spi2553.d" "uart.d" "util.d" 
+	-$(RM) "drivermoteur.obj" "main.obj" "spi2553.obj" "uart.obj" "util.obj" 
+	-$(RM) "drivermoteur.d" "main.d" "spi2553.d" "uart.d" "util.d" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
